# MYBOTIDK

./: main.py  pyproject.toml
app/: .env  __init__.py  main.py
app/data/: films.json  handler.py
app/keyboards/: __init__.py  films.py
app/routers/: films.py
