[tool.poetry]
name = "matlotlib"
version = "0.1.0"
description = ""
authors = ["czolowek <klutoi39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
